<resources>
    <string name="app_name">奥琦玮云POS HD</string>
    <string name="text_network_error">网络无连接，请检查网络配置!</string>
    <string name="setting_title_base">基本设置</string>
    <string name="setting_title_system">系统设置</string>
    <string name="setting_store_name">门店名称</string>
    <string name="setting_store_name_hine">请输入门店名称</string>
    <string name="setting_store_phone">联系电话</string>
    <string name="setting_store_phone_hine">请输入门店电话</string>
    <string name="setting_store_address">门店地址</string>
    <string name="setting_store_address_hine">请输入门店地址</string>
    <string name="setting_app_id">商户ID</string>
    <string name="setting_brand_id">品牌ID</string>
    <string name="setting_store_id">门店ID</string>
    <string name="setting_device_name">设备名称</string>
    <string name="setting_service_address">服务器地址</string>
    <string name="setting_service_port">端口号</string>
    <string name="setting_service_port2">端&#12288;口&#12288;号</string>
    <string name="setting_pos_id">本机ID</string>
    <string name="setting_save">保存</string>
    <string name="common_sure">确定</string>
    <string name="common_all">全单勾选</string>
    <string name="common_add">添加</string>
    <string name="common_cancel">取消</string>
    <string name="common_back">返回</string>
    <string name="title_login">员工登录</string>
    <string name="common_test_print">打印测试</string>
    <string name="string_login_id">账号</string>
    <string name="setting">设置</string>
    <string name="string_login_pwd">密码</string>
    <string name="setting_id">服务器IP地址:</string>
    <string name="setting_port">服务器IP端口:</string>
    <string name="setting_id_hint">请输入IP地址</string>
    <string name="setting_title_hint">请输入打印标题</string>
    <string name="setting_ptid_hint">请输入PTID</string>
    <string name="setting_port_hint">请输入IP端口</string>
    <string name="title_activity_setting">系统设置</string>
    <string name="title_activity_dc_main">主页面</string>
    <string name="title_activity_table_all">桌台</string>
    <string name="title_activity_login">登录</string>
    <string name="remberAccount">记住帐号</string>
    <string name="wxlogin">微信登录</string>
    <string name="accountlogin">账号登录</string>
    <string name="login">登  录</string>
    <string name="bind">绑  定</string>
    <string name="unbind">解  绑</string>
    <string name="upOrder">取  单</string>
    <string name="query">查  询</string>
    <string name="modify_pw">修改密码</string>
    <string name="ct_table">桌台管理</string>
    <string name="ct_new_order">新建订单</string>
    <string name="ct_today_order">当日订单</string>
    <string name="ct_manager">系统管理</string>
    <string name="ct_reports">报表管理</string>
    <string name="ct_retreat">退菜管理</string>
    <string name="ct_kt">开台</string>
    <string name="ct_dd">订单</string>
    <string name="ct_cp">菜品</string>
    <string name="ct_all">全部</string>
    <string name="ct_result">查询结果</string>
    <string name="ct_done">已下单</string>
    <string name="ct_done_left">已结账</string>
    <string name="ct_free">空闲</string>
    <string name="text_stranded">滞客</string>
    <string name="common_please_choise">请选择</string>
    <string name="common_covert_table">转台</string>
    <string name="common_add_table">并台</string>
    <string name="common_add_deliv">加菜</string>
    <string name="common_tips">提示</string>
    <string name="common_pay">支付</string>
    <string name="select_ok">选好了</string>
    <string name="text_null_table">空桌</string>
    <string name="text_clean_table">清台</string>
    <string name="common_update_tableinfo">修改开台信息</string>
    <string name="text_confirm_people_exit">确定客人离店吗?</string>
    <string name="text_all">全部</string>
    <string name="table_style_list">列表展示</string>
    <string name="table_style_live">实景展示</string>
    <string name="common_wechat_tips3">请输入用餐人数</string>
    <string name="common_peo_num">人数</string>
    <string name="common_retreat">退菜</string>
    <string name="select_one">来一份</string>
    <string name="order_type_zh">桌号</string>
    <string name="order_type_ct">餐牌号</string>
    <string name="order_comment">订单备注</string>
    <string name="price_total">合计</string>
    <string name="price_prefer">优惠</string>
    <string name="price_cost">应付</string>
    <string name="price_count">合计:</string>
    <string name="order_type_qrxd">确认下单</string>
    <string name="setmeal_select">套餐选择</string>
    <string name="order_clean">清空</string>
    <string name="order_check_out">下单</string>
    <string name="text_search">搜索</string>
    <string name="text_search_order">请输入订单号,快速查找订单</string>
    <string name="text_search_order_tablename">请输入订单号、台号快速查找订单</string>
    <string name="text_member_search">请输入手机号或会员卡号</string>
    <string name="text_staff_search">请输入员工编号</string>
    <string name="text_for_search">请输入用途</string>
    <string name="print_title">添加</string>
    <string name="print_mode_name">模块</string>
    <string name="print_mode_hide">请输入模块名称</string>
    <string name="exchange_work">班次</string>
    <string name="morning">早班</string>
    <string name="after">中班</string>
    <string name="night">晚班</string>
    <string name="standby_money">备用金</string>
    <string name="start_time">开始时间:</string>
    <string name="end_time">结束时间:</string>
    <string name="print_time">打印时间:</string>
    <string name="select_time">请选择时间:</string>
    <string name="standby_money_hine">请输入钱箱中剩余金额</string>
    <string name="dish_weight_hine">请输入菜品重量</string>
    <string name="company_name">奧琦玮信息科技（深圳）有限公司 云POS收银系统%s版本</string>
    <string name="company_name3">奧琦玮智慧餐厅云POS收银系统%s版本 服务热线400-010-3000</string>
    <string name="standby_pay_money_hine">请输入现金支付金额</string>
    <string name="standby_return_money_hine">请输入找零金额</string>
    <string name="company_address">深圳市南山区丽山路大学城创业园桑泰大厦B座14楼1401</string>
    <string name="company_name2">奥琦玮信息科技（深圳）有限公司</string>
    <string name="company_phone">86719362</string>
    <string name="sth_cook">做法</string>
    <string name="sth_taste">口味</string>
    <string name="sth_note_hine">输入备注</string>
    <string name="sth_dishName">菜名</string>
    <string name="sth_dishSum">数量</string>
    <string name="sth_dishPrice">价格</string>
    <string name="sth_dishGift">赠菜</string>
    <string name="sth_wx">微信</string>
    <string name="sth_zfb">支付宝</string>
    <string name="sth_money">现金</string>
    <string name="sth_payFrom">收银方式</string>
    <string name="sth_paidIn">支付宝</string>
    <string name="sth_returnMoney">找零</string>
    <string name="sth_returnMoney_pay">找零金额</string>
    <string name="sth_cash_pay">现金支付</string>
    <string name="sth_checkOut">结账</string>
    <string name="text_app_version_hine">发现新版本,是否选择更新?</string>
    <string name="text_app_version">版本检测</string>
    <string name="err_network">发现当前无网络，请检查网络设置！</string>
    <string name="sth_home_page">主页</string>
    <string name="sth_home_user">用户</string>
    <string name="sth_home_scan">扫码</string>
    <string name="sth_home_search">搜索</string>
    <string name="sth_home_checkout">结账</string>
    <string name="sth_home_logout">注销</string>
    <string name="sth_home_checkOrder">下单</string>
    <string name="sth_home_printe">打印</string>
    <string name="sth_home_main_select">选项</string>
    <string name="sth_home_check_box">钱箱</string>
    <string name="sth_home_dishmenu">菜单</string>
    <string name="sth_home_orderdish">点菜</string>
    <string name="sth_home_order">订单</string>
    <string name="sth_home_hang_order">挂单</string>
    <string name="sth_home_featch_order">取单</string>
    <string name="sth_home_show_view">视图</string>
    <string name="sth_home_netorders">网上订单</string>
    <string name="sth_home_refresh_tables">刷新桌台</string>
    <string name="sth_home_reserve">预订</string>
    <string name="sth_home_setting">设置</string>
    <string name="sth_home_do">操作</string>
    <string name="sth_home_select">选择</string>
    <string name="sth_home_success">完成</string>
    <string name="sth_customer_name">客户姓名</string>
    <string name="sth_phone">电&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;话</string>
    <string name="sth_note">备&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;注</string>
    <string name="sth_time">时&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;间</string>
    <string name="sth_person">人&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;数</string>
    <string name="sth_menber_number">会&#160;&#160;员&#160;&#160;号</string>
    <string name="sth_customer_name_hine">请输入客户名称</string>
    <string name="sth_phone_hine">请输入预定人电话</string>
    <string name="sth_member_number_hine">请输入会员号</string>
    <string name="sth_note_info_hine">请输入备注信息</string>
    <string name="sth_person_hine">请输入就餐人数</string>
    <string name="sth_kds_hine">请输入厨房显示器的名称(仅为显示用途)</string>
    <string name="sth_kds_ip_hine">请输入厨房显示器的IP地址,IP地址可以在KDS应用程序的顶部菜单栏找到,类似192.168.1.123</string>
    <string name="sth_date_hine">请选择日期</string>
    <string name="sth_start_date_hine">请选择查询的开始日期</string>
    <string name="sth_end_date_hine">请选择查询的结束日期</string>
    <string name="sth_time_hine">请选择时间</string>
    <string name="sth_assign_table">指定桌台</string>
    <string name="sth_reserve_title">预定信息</string>
    <string name="sth_print_state_title">打印状态检测</string>
    <string name="sth_set_remind">设置提醒</string>
    <string name="sth_change_account_title">记账</string>
    <string name="sth_take_out_title">外卖</string>
    <string name="sth_revokeInvoice_title">发票冲红</string>
    <string name="sth_reserve_place_title">预定留位</string>
    <string name="sth_empty_table_title">转台</string>
    <string name="sth_name">姓名</string>
    <string name="sth_outerOrderId">订单号</string>
    <string name="order_id_xx">订单号:</string>
    <string name="sth_revokeInvoice_reason">冲红原因</string>
    <string name="revokeInvoice">冲红</string>
    <string name="recheckout">反结账</string>
    <string name="sth_phone2">电话</string>
    <string name="sth_city">城市</string>
    <string name="sth_address">地址</string>
    <string name="sth_time2">时间</string>
    <string name="sth_remind2">提醒</string>
    <string name="sth_advance">提前</string>
    <string name="sth_minutes">分钟</string>
    <string name="sth_note2">备注</string>
    <string name="sth_refresh">刷新</string>
    <string name="sth_name_hine">请输入收货人姓名,输入即打印</string>
    <string name="sth_phone_hine2">请输入收货人电话号码,输入即打印</string>
    <string name="sth_city_hine">请输入所在城市</string>
    <string name="sth_address_hine">请输入收货人地址,输入即打印</string>
    <string name="sth_outerOrderId_hine">请输入外部平台订单号,输入即打印</string>
    <string name="standby_tableNumber_hine">请输入餐牌号</string>
    <string name="standby_tableNumber__info">请输入餐牌信息</string>
    <string name="standby_order_comment_hine">请输入订单备注</string>
    <string name="standby_peopleNums_hine">请输入用餐人数</string>
    <string name="sth_search_dishname_ali_hine">请输入菜品名或简称快速搜索</string>
    <string name="sth_revokeInvoice_hine">请输入发票冲红原因</string>
    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ：:.;</string>
    <string name="sth_menber_hine">请提醒客户打开手机，扫描客显上的二维码确认会员身份。或者打开会员二维码，在扫码台扫描确认会员身份.\n代金券，礼品券仅显示本店可用</string>
    <string name="sth_loading">L O A D I N G ...</string>
    <string name="sth_chinese">中文(中文简体)</string>
    <string name="sth_english">English</string>
    <string name="main_app_title">奥琦玮云POS智慧餐厅</string>
    <string name="main_app_title2">奥琦玮云POS智慧餐厅2.0</string>
    <string name="terminal_title">终端绑定</string>
    <string name="member">会员</string>
    <string name="member_card_type">会员卡类型</string>
    <string name="member_card_number">会员卡号</string>
    <string name="phone_number">手机号</string>
    <string name="card_level">卡等级</string>
    <string name="cardholder_name">持卡人姓名</string>
    <string name="cardholder_sex">持卡人性别</string>
    <string name="activate_card_time">开卡时间</string>
    <string name="state">状态</string>
    <string name="shift_id">班次Id</string>
    <string name="shift_name">班次名称</string>
    <string name="terminal_name">终端名称</string>
    <string name="personnel_name">人员名称</string>
    <string name="start_time2">开始时间</string>
    <string name="end_time2">结束时间</string>
</resources>