<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="horizontal"
    >

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/shift_id"
        android:gravity="center"
        android:textColor="@color/order_day_font_darkgray"
        android:textSize="@dimen/str_defaul_16"
        />
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.5"
        android:text="@string/personnel_name"
        android:gravity="center"
        android:textColor="@color/order_day_font_darkgray"
        android:textSize="@dimen/str_defaul_16"
        />
    <TextView
        android:id="@+id/tv_worketName"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.3"
        android:text="@string/shift_name"
        android:gravity="center"
        android:textColor="@color/order_day_font_darkgray"
        android:textSize="@dimen/str_defaul_16"
        />
    <TextView
        android:id="@+id/tv_terminalName"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.3"
        android:text="@string/terminal_name"
        android:gravity="center"
        android:textColor="@color/order_day_font_darkgray"
        android:textSize="@dimen/str_defaul_16"
        />
    <TextView
        android:id="@+id/tv_startTime"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:text="@string/start_time2"
        android:gravity="center"
        android:textColor="@color/order_day_font_darkgray"
        android:textSize="@dimen/str_defaul_16"
        />
    <TextView
        android:id="@+id/tv_endTime"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:text="@string/end_time2"
        android:gravity="center"
        android:textColor="@color/order_day_font_darkgray"
        android:textSize="@dimen/str_defaul_16"
        />
    <TextView
        android:id="@+id/print_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/item_spacing8"
        android:layout_weight="3.15"
        android:background="@drawable/btn_selector_bright_blue"
        android:gravity="center"
        android:text="@string/sth_home_printe"
        android:padding="@dimen/dp15"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginBottom="@dimen/dp10"
        android:layout_marginRight="@dimen/dp10"
        android:textColor="@color/white"
        android:textSize="@dimen/str_defaul_16"
        />


</LinearLayout>
